WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238147
[WebAuthn] Pass along timeout to ASA and ignore timeout for conditional mediation requests
https://bugs.webkit.org/show_bug.cgi?id=238147
Summary
[WebAuthn] Pass along timeout to ASA and ignore timeout for conditional media...
pascoe@apple.com
Reported
2022-03-21 10:42:15 PDT
^
Attachments
Patch
(19.04 KB, patch)
2022-03-21 11:00 PDT
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Patch
(18.99 KB, patch)
2022-03-21 14:57 PDT
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2022-03-21 10:42:21 PDT
rdar://90509464
pascoe@apple.com
Comment 2
2022-03-21 11:00:36 PDT
Created
attachment 455256
[details]
Patch
pascoe@apple.com
Comment 3
2022-03-21 14:57:07 PDT
Created
attachment 455277
[details]
Patch
Brent Fulgham
Comment 4
2022-03-21 16:10:34 PDT
Comment on
attachment 455277
[details]
Patch lgtm. r=me
EWS
Comment 5
2022-03-22 10:13:28 PDT
Committed
r291625
(
248718@main
): <
https://commits.webkit.org/248718@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455277
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug